--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>KasKu - Aplikasi Pencatatan Keuangan UMKM</title>
+    <title>Lapkeu - Aplikasi Pencatatan Keuangan UMKM</title>
     <meta name="description" content="Aplikasi pencatatan debet kredit modern untuk UMKM Indonesia. Kelola keuangan usaha dengan mudah dan efisien." />
     <meta name="author" content="KasKu" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
