--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Lapkeu - Aplikasi Pencatatan Keuangan UMKM</title>
     <meta name="description" content="Aplikasi pencatatan debet kredit modern untuk UMKM Indonesia. Kelola keuangan usaha dengan mudah dan efisien." />
-    <meta name="author" content="KasKu" />
+    <meta name="author" content="Lapkeu" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="KasKu - Aplikasi Pencatatan Keuangan UMKM" />
+    <meta property="og:title" content="Lapkeu - Aplikasi Pencatatan Keuangan UMKM" />
     <meta property="og:description" content="Aplikasi pencatatan debet kredit modern untuk UMKM Indonesia" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://www.svgrepo.com/show/415697/cash-money-payment.svg" />
